--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev" : "nodemon src/app.js -e hbs,js,html"
+    "dev" : "nodemon src/app.js -e hbs,js,html",
+    "start" : "node src/app.js -e hbs,js,html"
   },
   "keywords": [],
   "author": "",
